Created account page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,4 +52,8 @@
   .tableDataFeature {
     @apply w-[calc(100%/3)] p-2.5 text-center md:w-[calc(60%/3)] md:p-3.5;
   }
+
+  .accountPlans {
+    @apply mt-6 grid grid-cols-1 gap-x-4 border px-4 py-4 md:grid-cols-4 md:border-x-0 md:border-t md:border-b-0 md:px-0 md:pb-0;
+  }
 }
